# Core-WebView

./: .gitignore  CMakeLists.txt  GenerateSolution.bat  LICENSE  README.md
extra/: DllMain.cpp
include/webview/: Controller.h  Delegate.h  EventArgs.h  Interfaces.h  Settings.h  View.h
src/: Optimized.cc  PlatformSdk.h  StdLibrary.h  libBoost.h
src/webview/: Stub.cpp
